# embassy-stm32-template

./: Cargo.toml  cargo-generate.toml  pre-script.rhai
src/: main.rs
